--- a/utility-explorer-ui/package.json
+++ b/utility-explorer-ui/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "vue": "^3.4.0",
     "vue-router": "^4.2.0",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "leaflet": "^1.9.0",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.3.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
