--- a/.env.template
+++ b/.env.template
@@ -12,7 +12,7 @@ FLYWAY_ENABLED=true
 INGESTION_DISPATCHER_ENABLED=false
 INGESTION_TICK_SECONDS=600
 
-COPILOT_ENABLED=false
+COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
