Getting it to work for electricity cost data.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
 
       COPILOT_ENABLED: ${COPILOT_ENABLED}
       COPILOT_API_KEY: ${COPILOT_API_KEY}
+      EIA_API_KEY: ${EIA_API_KEY}
 
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       RAW_PAYLOAD_STORAGE_DIR: ${RAW_PAYLOAD_STORAGE_DIR}
