--- a/utility-explorer-api/Dockerfile
+++ b/utility-explorer-api/Dockerfile
@@ -1,4 +1,4 @@
-FROM openjdk:17-jdk-slim
+FROM eclipse-temurin:17-jdk-jammy
 
 WORKDIR /app
 
@@ -6,7 +6,7 @@ COPY pom.xml .
 COPY src ./src
 
 RUN apt-get update && apt-get install -y maven && \
-    mvn clean package -DskipTests && \
+    mvn clean package -DskipTests -Dmaven.test.skip=true && \
     apt-get remove -y maven && \
     apt-get autoremove -y && \
     rm -rf /var/lib/apt/lists/*
