--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # --- API ---
 APP_ENV=local
-SERVER_PORT=8080
+SERVER_PORT=8081
 
 DB_HOST=postgres
 DB_PORT=5432
@@ -9,14 +9,16 @@ DB_USER=utility_explorer
 DB_PASSWORD=utility_explorer
 
 FLYWAY_ENABLED=true
-INGESTION_DISPATCHER_ENABLED=false
+INGESTION_DISPATCHER_ENABLED=true
 INGESTION_TICK_SECONDS=600
 
 COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
+EIA_API_KEY=jGYJAJbBBPCbtnb51Kpb0ychsYyXaqKNA1vbGJMm
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 RAW_PAYLOAD_STORAGE_DIR=/data/raw
 
 # --- UI ---
-VITE_API_BASE_URL=http://localhost:8080/api/v1
+VITE_API_BASE_URL=http://localhost:8081/api/v1
+VITE_DEV_PORT=5173
