--- a/.env.template
+++ b/.env.template
@@ -9,14 +9,16 @@ DB_USER=utility_explorer
 DB_PASSWORD=utility_explorer
 
 FLYWAY_ENABLED=true
-INGESTION_DISPATCHER_ENABLED=false
+INGESTION_DISPATCHER_ENABLED=true
 INGESTION_TICK_SECONDS=600
 
 COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
+EIA_API_KEY=
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 RAW_PAYLOAD_STORAGE_DIR=/data/raw
 
 # --- UI ---
 VITE_API_BASE_URL=http://localhost:8080/api/v1
+VITE_DEV_PORT=5173
