--- a/utility-explorer-ui/package.json
+++ b/utility-explorer-ui/package.json
@@ -11,7 +11,8 @@
     "vue": "^3.4.0",
     "vue-router": "^4.2.0",
     "axios": "^1.6.0",
-    "leaflet": "^1.9.0",
+    "highcharts": "^11.4.0",
+    "@highcharts/map-collection": "^2.1.0",
     "chart.js": "^4.4.0",
     "vue-chartjs": "^5.3.0"
   },
