--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@ INGESTION_TICK_SECONDS=600
 
 COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
-EIA_API_KEY=jGYJAJbBBPCbtnb51Kpb0ychsYyXaqKNA1vbGJMm
+EIA_API_KEY=
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 RAW_PAYLOAD_STORAGE_DIR=/data/raw
