fixed the issue.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
       COPILOT_ENABLED: ${COPILOT_ENABLED}
       COPILOT_API_KEY: ${COPILOT_API_KEY}
       EIA_API_KEY: ${EIA_API_KEY}
+      CENSUS_API_KEY: ${CENSUS_API_KEY}
+      CENSUS_ACS_MAX_YEAR: ${CENSUS_ACS_MAX_YEAR}
+      CENSUS_ACS_MIN_YEAR: ${CENSUS_ACS_MIN_YEAR}
 
       CORS_ALLOWED_ORIGINS: ${CORS_ALLOWED_ORIGINS}
       RAW_PAYLOAD_STORAGE_DIR: ${RAW_PAYLOAD_STORAGE_DIR}
