--- a/.env.template
+++ b/.env.template
@@ -15,6 +15,9 @@ INGESTION_TICK_SECONDS=600
 COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
 EIA_API_KEY=
+CENSUS_API_KEY=
+CENSUS_ACS_MAX_YEAR=2023
+CENSUS_ACS_MIN_YEAR=2021
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 RAW_PAYLOAD_STORAGE_DIR=/data/raw
