--- a/utility-explorer-api/src/main/resources/application.yml
+++ b/utility-explorer-api/src/main/resources/application.yml
@@ -44,3 +44,10 @@ logging:
     org.springframework.web: INFO
   pattern:
     console: "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    disable-swagger-default-url: true
