--- a/utility-explorer-api/pom.xml
+++ b/utility-explorer-api/pom.xml
@@ -49,6 +49,13 @@
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
         </dependency>
+
+        <!-- OpenAPI/Swagger UI -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.3.0</version>
+        </dependency>
         
         <dependency>
             <groupId>org.springframework.boot</groupId>
