--- a/.env.template
+++ b/.env.template
@@ -16,8 +16,10 @@ COPILOT_ENABLED=true
 COPILOT_API_KEY=dev_key_change_me
 EIA_API_KEY=
 CENSUS_API_KEY=
-CENSUS_ACS_MAX_YEAR=2023
-CENSUS_ACS_MIN_YEAR=2021
+CENSUS_ACS_MAX_YEAR=
+CENSUS_ACS_MIN_YEAR=
+CENSUS_ACS_YEARS_BACK=6
+EIA_MONTHS_BACK=72
 CORS_ALLOWED_ORIGINS=http://localhost:5173
 
 RAW_PAYLOAD_STORAGE_DIR=/data/raw
@@ -25,3 +27,6 @@ RAW_PAYLOAD_STORAGE_DIR=/data/raw
 # --- UI ---
 VITE_API_BASE_URL=http://localhost:8080/api/v1
 VITE_DEV_PORT=5173
+VITE_DISPLAY_YEARS=6
+VITE_TIME_WINDOW_YEARS=15
+VITE_MAP_SEARCH_YEARS=15
