removing copilot reference and changing it to UtilAgent

--- a/.env.template
+++ b/.env.template
@@ -12,8 +12,8 @@ FLYWAY_ENABLED=true
 INGESTION_DISPATCHER_ENABLED=true
 INGESTION_TICK_SECONDS=600
 
-COPILOT_ENABLED=true
-COPILOT_API_KEY=dev_key_change_me
+UTIL_AGENT_ENABLED=true
+UTIL_AGENT_API_KEY=dev_key_change_me
 EIA_API_KEY=
 CENSUS_API_KEY=
 CENSUS_ACS_MAX_YEAR=
