--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,8 +28,8 @@ services:
       INGESTION_DISPATCHER_ENABLED: ${INGESTION_DISPATCHER_ENABLED}
       INGESTION_TICK_SECONDS: ${INGESTION_TICK_SECONDS}
 
-      COPILOT_ENABLED: ${COPILOT_ENABLED}
-      COPILOT_API_KEY: ${COPILOT_API_KEY}
+      UTIL_AGENT_ENABLED: ${UTIL_AGENT_ENABLED}
+      UTIL_AGENT_API_KEY: ${UTIL_AGENT_API_KEY}
       EIA_API_KEY: ${EIA_API_KEY}
       CENSUS_API_KEY: ${CENSUS_API_KEY}
       CENSUS_ACS_MAX_YEAR: ${CENSUS_ACS_MAX_YEAR}
