--- a/utility-explorer-ui/.env
+++ b/utility-explorer-ui/.env
@@ -1,2 +1,5 @@
 VITE_API_BASE_URL=http://localhost:8081/api/v1
 VITE_DEV_PORT=5173
+VITE_DISPLAY_YEARS=6
+VITE_TIME_WINDOW_YEARS=15
+VITE_MAP_SEARCH_YEARS=15
