--- a/config/observability/otel-collector-config.yaml
+++ b/config/observability/otel-collector-config.yaml
@@ -23,6 +23,14 @@ exporters:
     verbosity: detailed
 
 service:
+  telemetry:
+    metrics:
+      readers:
+        - pull:
+            exporter:
+              prometheus:
+                host: "0.0.0.0"
+                port: 8888
   pipelines:
     traces:
       receivers: [otlp]
