--- a/utility-explorer-ui/package.json
+++ b/utility-explorer-ui/package.json
@@ -9,29 +9,30 @@
     "test": "vitest"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
-    "axios": "^1.6.0",
-    "highcharts": "^11.4.0",
     "@highcharts/map-collection": "^2.1.0",
-    "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.3.0",
     "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/sdk-trace-web": "^1.18.1",
-    "@opentelemetry/instrumentation-document-load": "^0.33.0",
+    "@opentelemetry/auto-instrumentations-web": "^0.33.1",
     "@opentelemetry/context-zone": "^1.18.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.45.1",
-    "@opentelemetry/resources": "^1.18.1",
-    "@opentelemetry/semantic-conventions": "^1.18.1",
-    "@opentelemetry/auto-instrumentations-web": "^0.33.1",
+    "@opentelemetry/instrumentation-document-load": "^0.33.0",
+    "@opentelemetry/instrumentation-fetch": "^0.43.0",
     "@opentelemetry/instrumentation-xml-http-request": "^0.43.0",
-    "@opentelemetry/instrumentation-fetch": "^0.43.0"
+    "@opentelemetry/resources": "^1.18.1",
+    "@opentelemetry/sdk-trace-web": "^1.18.1",
+    "@opentelemetry/semantic-conventions": "^1.18.1",
+    "axios": "^1.6.0",
+    "chart.js": "^4.4.0",
+    "highcharts": "^11.4.0",
+    "marked": "^17.0.1",
+    "vue": "^3.4.0",
+    "vue-chartjs": "^5.3.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "vite": "^5.0.0",
-    "vitest": "^1.2.0",
     "@vue/test-utils": "^2.4.0",
-    "jsdom": "^24.0.0"
+    "jsdom": "^24.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.2.0"
   }
 }
